training loop working

--- a/build_behav_csv.ipynb
+++ b/build_behav_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +61,14 @@
     "# Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "\n",
+    "split_row = 192\n",
+    "\n",
+    "train_df = df.iloc[:split_row]\n",
+    "val_df = df.iloc[split_row:]\n",
+    "\n",
     "# Save DataFrame to CSV\n",
-    "df.to_csv('behav.csv', index=False)"
+    "train_df.to_csv('train_behav.csv', index=False)\n",
+    "val_df.to_csv('val_behav.csv', index=False)"
    ]
   },
   {
