--- a/main.ipynb
+++ b/main.ipynb
@@ -43,8 +43,8 @@
     "val_behav_file = 'val_behav.csv'\n",
     "base_lr = 0.0001\n",
     "decay_weight = 0.1 \n",
-    "epoch_decay = 30 \n",
-    "b_size = 5\n",
+    "epoch_decay = 5 \n",
+    "b_size = 3\n",
     "n_epochs = 10"
    ]
   },
@@ -290,20 +290,26 @@
     "class EEGCNN(nn.Module):\n",
     "    def __init__(self, num_classes=4):\n",
     "        super(EEGCNN, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=(3, 10), padding=(1, 5))\n",
+    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=(3, 40), padding=(1, 20))  # Preserves time dimension\n",
     "        self.bn1 = nn.BatchNorm2d(16)\n",
-    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=(3, 10), padding=(1, 5))\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=(3, 25), padding=(1, 12))  # Preserves time dimension\n",
     "        self.bn2 = nn.BatchNorm2d(32)\n",
-    "        self.conv3 = nn.Conv2d(32, 64, kernel_size=(3, 10), padding=(1, 5))\n",
+    "        self.conv3 = nn.Conv2d(32, 64, kernel_size=(3, 10), padding=(1, 5))  # Preserves time dimension\n",
     "        self.bn3 = nn.BatchNorm2d(64)\n",
-    "        self.pool = nn.MaxPool2d((2, 4))\n",
+    "        self.pool = nn.MaxPool2d((2, 4))  # Reduces height by 2, width by 4\n",
     "        self.dropout1 = nn.Dropout(0.25)\n",
     "        self.dropout2 = nn.Dropout(0.5)\n",
-    "        self.fc1 = nn.Linear(64 * 16 * 19, 100)\n",
+    "\n",
+    "        # Calculating the output dimensions after pooling:\n",
+    "        # Initial input shape: (1, 129, 1250)\n",
+    "        # After first pool: (16, 65, 312)\n",
+    "        # After second pool: (32, 33, 78)\n",
+    "        # After third pool: (64, 17, 20)\n",
+    "        self.fc1 = nn.Linear(19456, 100)  # 64 channels, height 17, width 20\n",
     "        self.fc2 = nn.Linear(100, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x.unsqueeze(1)\n",
+    "        x = x.unsqueeze(1)  # Add channel dimension\n",
     "        x = F.leaky_relu(self.bn1(self.conv1(x)))\n",
     "        x = self.pool(x)\n",
     "        x = F.leaky_relu(self.bn2(self.conv2(x)))\n",
@@ -315,68 +321,14 @@
     "        x = F.leaky_relu(self.fc1(x))\n",
     "        x = self.dropout2(x)\n",
     "        x = self.fc2(x)\n",
-    "        return x\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training loop for CNN & V vs. Time data"
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 192/192 [00:09<00:00, 20.51it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Class counts:  {'HEHF': 2489, 'HELF': 238, 'LEHF': 1371, 'LELF': 878}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 48/48 [00:02<00:00, 19.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Class counts:  {'HEHF': 508, 'HELF': 101, 'LEHF': 535, 'LELF': 100}\n",
-      "done making loader:  train\n",
-      "done making loader:  val\n",
-      "----------\n",
-      "Epoch 0/9\n",
-      "----------\n",
-      "LR is set to 0.0001\n",
-      "Reached batch iteration 0\n",
-      "Reached batch iteration 100\n",
-      "Reached batch iteration 200\n",
-      "Reached batch iteration 300\n",
-      "Reached batch iteration 400\n",
-      "Reached batch iteration 500\n",
-      "Reached batch iteration 600\n",
-      "Reached batch iteration 700\n",
-      "Reached batch iteration 800\n",
-      "Reached batch iteration 900\n",
-      "train Loss: 0.2747 Acc: 0.3129\n",
-      "Reached batch iteration 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def train_model(model, criterion, optimizer, lr_scheduler, num_epochs=10):\n",
     "    since = time.time()\n",
@@ -436,6 +388,8 @@
     "\n",
     "                loss = criterion(outputs, labels)\n",
     "\n",
+    "                print(counter)\n",
+    "                \n",
     "                if counter%100 == 0:\n",
     "                    print('Reached batch iteration', counter)\n",
     "\n",
@@ -468,8 +422,22 @@
     "    print('Best val Acc: {:4f}'.format(best_acc))\n",
     "    print('returning and looping back')\n",
     "\n",
-    "    return best_model, accuracies, losses\n",
-    "\n",
+    "    return best_model, accuracies, losses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training loop for CNN & V vs. Time data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dsets = {}\n",
     "dsets['train'] = RawDataset(train_dir, train_behav_file, data_transforms['train'])\n",
     "dsets['val'] = RawDataset(val_dir, val_behav_file, data_transforms['val'])\n",
@@ -511,8 +479,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset class for spectrogram data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +550,7 @@
     "                full_data = mne.io.read_raw_fif(data_path, preload=False)\n",
     "\n",
     "                # Splitting full EEG recording into 5 second slices\n",
-    "                num_intervals = (full_data.get_data().shape[1] // 3) // 84\n",
+    "                num_intervals = (full_data.get_data().shape[1] // 3) // (84 * 5)\n",
     "                for i in range(num_intervals):\n",
     "                    slice = [data_path, i*84, i*84+84]\n",
     "                    \n",
@@ -617,7 +592,7 @@
     "        frequencies = np.logspace(np.log10(1), np.log10(40), num=40)\n",
     "        n_cycles = frequencies / 2.  # Different number of cycle per frequency\n",
     "        # Compute time-frequency representation with Morlet wavelets\n",
-    "        power = tfr_morlet(full_data, freqs=frequencies, n_cycles=n_cycles, use_fft=True, return_itc=False, decim=3, n_jobs=4)\n",
+    "        power = tfr_morlet(full_data, freqs=frequencies, n_cycles=n_cycles, use_fft=True, return_itc=False, decim=3, n_jobs=1)\n",
     "        # power has shape (129, 40, 11609)\n",
     "\n",
     "        eeg_data = power.get_data()[:, :, eeg_index[1] : eeg_index[2]]\n",
@@ -627,8 +602,140 @@
     "        if self.target_transform:\n",
     "            label = self.target_transform(label)\n",
     "\n",
-    "        return eeg_data[0], label"
+    "        new_shape = (eeg_data.shape[0], eeg_data.shape[1] * eeg_data.shape[2])  # (129, 40*84)\n",
+    "        eeg_data = eeg_data.reshape(new_shape)\n",
+    "\n",
+    "        return eeg_data, label\n",
+    "        # eeg_data has shape (129, 3360)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SpectrogramCNN(nn.Module):\n",
+    "    def __init__(self, num_classes=4):\n",
+    "        super(SpectrogramCNN, self).__init__()\n",
+    "        # Reduce the number of convolutional layers and channels\n",
+    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=(3, 10), padding=(1, 5))  # One layer, more channels\n",
+    "        self.bn1 = nn.BatchNorm2d(32)\n",
+    "        self.pool = nn.MaxPool2d((2, 4))  # Pooling to reduce dimensions\n",
+    "\n",
+    "        # Simplified dropout and fewer fully connected layers\n",
+    "        self.dropout = nn.Dropout(0.25)\n",
+    "        \n",
+    "        # The fully connected layer sizes need to be adjusted based on the actual output dimensions\n",
+    "        # Placeholder dimensions for illustration; you will need to calculate the exact number based on your input size after pooling\n",
+    "        self.fc1 = nn.Linear(1733760, num_classes)  # Direct connection to output\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.unsqueeze(1)  # Add channel dimension\n",
+    "        x = F.leaky_relu(self.bn1(self.conv1(x)))\n",
+    "        x = self.pool(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.fc1(x)\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training loop for CNN & spectrogram data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 192/192 [00:10<00:00, 19.09it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class counts:  {'HEHF': 2482, 'HELF': 238, 'LEHF': 1366, 'LELF': 874}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 48/48 [00:01<00:00, 25.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class counts:  {'HEHF': 507, 'HELF': 100, 'LEHF': 533, 'LELF': 100}\n",
+      "done making loader:  train\n",
+      "done making loader:  val\n",
+      "----------\n",
+      "Epoch 0/9\n",
+      "----------\n",
+      "LR is set to 0.0001\n",
+      "0\n",
+      "Reached batch iteration 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "dsets = {}\n",
+    "dsets['train'] = SpectroDataset(train_dir, train_behav_file, data_transforms['train'])\n",
+    "dsets['val'] = SpectroDataset(val_dir, val_behav_file, data_transforms['val'])\n",
+    "\n",
+    "dset_sizes = {split: len(dsets[split]) for split in ['train', 'val']}\n",
+    "\n",
+    "dset_loaders = {}\n",
+    "for split in ['train', 'val']:\n",
+    "    targets = np.zeros(dsets[split].__len__())\n",
+    "    for i in range(len(targets)):\n",
+    "        label = dsets[split].get_label(i)\n",
+    "        targets[i] = label\n",
+    "    class_counts = dsets[split].get_class_counts()\n",
+    "    class_weights = {tag: 1.0 / count if count > 0 else 0 for tag, count in class_counts.items()}\n",
+    "    weights = np.array([class_weights[tag] for tag in targets])\n",
+    "    sampler = WeightedRandomSampler(weights, num_samples=len(weights), replacement=True)\n",
+    "\n",
+    "    dset_loaders[split] = torch.utils.data.DataLoader(dsets[split], batch_size=b_size, num_workers=0, sampler=sampler)\n",
+    "    print('done making loader: ', split)\n",
+    "model_ft = SpectrogramCNN(num_classes=4)\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "if use_gpu:\n",
+    "    criterion.cuda()\n",
+    "    model_ft.cuda()\n",
+    "\n",
+    "if use_mps:\n",
+    "    criterion.to(mps_device)\n",
+    "    model_ft.to(mps_device)\n",
+    "\n",
+    "optimizer_ft = optim.Adam(model_ft.parameters(), lr=0.0001, weight_decay=1e-5)\n",
+    "\n",
+    "model_ft, accuracies, losses = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler, num_epochs=n_epochs)\n",
+    "\n",
+    "for split in ['train', 'val']:\n",
+    "    print(split, 'accuracies by epoch:', accuracies[split])\n",
+    "    print(split, 'losses by epoch:', losses[split])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
