--- a/main.ipynb
+++ b/main.ipynb
@@ -685,7 +685,9 @@
       "----------\n",
       "LR is set to 0.0001\n",
       "0\n",
-      "Reached batch iteration 0\n"
+      "Reached batch iteration 0\n",
+      "1\n",
+      "2\n"
      ]
     }
    ],
