--- a/main.ipynb
+++ b/main.ipynb
@@ -752,7 +752,8 @@
       "Reached batch iteration 0\n",
       "Reached batch iteration 100\n",
       "Reached batch iteration 200\n",
-      "Reached batch iteration 300\n"
+      "Reached batch iteration 300\n",
+      "Reached batch iteration 400\n"
      ]
     }
    ],
