--- a/model_training/CNN_spec.ipynb
+++ b/model_training/CNN_spec.ipynb
@@ -118,7 +118,7 @@
     "    new_value = [v.cpu().numpy() for v in value]\n",
     "    accuracies[key] = new_value\n",
     "\n",
-    "torch.save(model_ft.state_dict(), '../models/CNN_spec_best_model.pt')\n",
+    "torch.save(model_ft.state_dict(), '../../models/CNN_spec_best_model.pt')\n",
     "\n",
     "plot_training_history(accuracies, losses, 'CNN_spec')\n",
     "plot_confusion_matrix(labels, preds, 'CNN_spec')"
