--- a/model_training/CNN_VT.ipynb
+++ b/model_training/CNN_VT.ipynb
@@ -253,7 +253,7 @@
     "    new_value = [v.cpu().numpy() for v in value]\n",
     "    accuracies[key] = new_value\n",
     "\n",
-    "torch.save(model_ft.state_dict(), '../models/CNN_VT_best_model.pt')\n",
+    "torch.save(model_ft.state_dict(), '../../models/CNN_VT_best_model.pt')\n",
     "\n",
     "plot_training_history(accuracies, losses, 'CNN_VT')\n",
     "plot_confusion_matrix(labels, preds, 'CNN_VT')"
