--- a/model_training/MLP_spec.ipynb
+++ b/model_training/MLP_spec.ipynb
@@ -111,7 +111,7 @@
     "    new_value = [v.cpu().numpy() for v in value]\n",
     "    accuracies[key] = new_value\n",
     "\n",
-    "torch.save(model_ft.state_dict(), '../models/MLP_spec_best_model.pt')\n",
+    "torch.save(model_ft.state_dict(), '../../models/MLP_spec_best_model.pt')\n",
     "\n",
     "plot_training_history(accuracies, losses, 'MLP_spec')\n",
     "plot_confusion_matrix(labels, preds, 'MLP_spec')"
