--- a/analysis/visualize_data.ipynb
+++ b/analysis/visualize_data.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,8 @@
       "        [ 5.8822e-08,  4.1294e-06,  6.1791e-06,  ...,  1.4211e-05,\n",
       "          1.0892e-05,  1.4385e-06],\n",
       "        [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
-      "          0.0000e+00,  0.0000e+00]])\n"
+      "          0.0000e+00,  0.0000e+00]])\n",
+      "shape of the data is: torch.Size([129, 1250])\n"
      ]
     }
    ],
@@ -154,7 +155,8 @@
     "\n",
     "print(f'Voltage vs. Time for Subject {rand_subj} Listening to Song {rand_song}')\n",
     "# Across all channels from 0 to 5 seconds\n",
-    "print(torch.Tensor(raw.get_data()[:, 0:1250]))\n"
+    "print(torch.Tensor(raw.get_data()[:, 0:1250]))\n",
+    "print(f'shape of the data is: {torch.Tensor(raw.get_data()[:, 0:1250]).shape}')\n"
    ]
   },
   {
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +204,8 @@
       "        [3.9470e-10, 1.7852e-09, 5.3937e-09,  ..., 1.0087e-10, 7.0156e-12,\n",
       "         1.2739e-11],\n",
       "        [0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
-      "         0.0000e+00]])\n"
+      "         0.0000e+00]])\n",
+      "shape of the data is: torch.Size([129, 840])\n"
      ]
     }
    ],
@@ -227,6 +230,7 @@
     "eeg_data = eeg_data.reshape(new_shape)\n",
     "\n",
     "print(eeg_data)\n",
+    "print(f'shape of the data is: {eeg_data.shape}')\n",
     "# eeg_data has shape (129, 840)"
    ]
   },
