--- a/analysis/visualize_data.ipynb
+++ b/analysis/visualize_data.ipynb
@@ -58,30 +58,54 @@
     }
    ],
    "source": [
+    "# Define transformations to apply to the dataset images. In this case, converting images to tensors.\n",
     "data_transforms = {\n",
     "    'train': transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
+    "        transforms.ToTensor(),  # Transform images to PyTorch tensors\n",
     "    ]),\n",
     "    'val': transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
+    "        transforms.ToTensor(),  # Transform images to PyTorch tensors\n",
     "    ]),\n",
     "}\n",
     "\n",
-    "# Setup datasets and loaders\n",
+    "# Setup datasets for training and validation using specified directories and behavior files,\n",
+    "# applying the previously defined transformations to each dataset.\n",
     "spec_dsets = {\n",
-    "    'train': RawDataset(train_dir, train_behav_file, data_transforms['train']),\n",
-    "    'val': RawDataset(val_dir, val_behav_file, data_transforms['val'])\n",
+    "    'train': RawDataset(train_dir, train_behav_file, data_transforms['train']),  # Training dataset\n",
+    "    'val': RawDataset(val_dir, val_behav_file, data_transforms['val'])  # Validation dataset\n",
     "}\n",
-    "spec_dset_sizes = {split: len(spec_dsets[split]) for split in ['train', 'val']}\n",
     "\n",
+    "# Calculate dataset sizes for train and validation sets to manage samples during training.\n",
+    "spec_dset_sizes = {split: len(spec_dsets[split]) for split in ['train', 'val']}  # Dictionary comprehension to calculate sizes\n",
+    "\n",
+    "# Initialize dictionary to store data loaders for both training and validation datasets.\n",
     "spec_dset_loaders = {}\n",
+    "\n",
+    "# Loop over each dataset split (train, val) to set up data loaders.\n",
     "for split in ['train', 'val']:\n",
+    "    # Get array of labels for the current dataset split.\n",
     "    targets = np.array([spec_dsets[split].get_label(i) for i in range(len(spec_dsets[split]))])\n",
+    "\n",
+    "    # Get counts of each class in the current dataset split.\n",
     "    class_counts = spec_dsets[split].get_class_counts()\n",
+    "\n",
+    "    # Calculate class weights as the inverse of class counts, handling classes with zero instances.\n",
     "    class_weights = np.array([1.0 / class_counts[label] if class_counts[label] > 0 else 0 for label in targets])\n",
+    "\n",
+    "    # Setup a weighted random sampler to handle class imbalance by assigning weights to each sample.\n",
     "    sampler = WeightedRandomSampler(class_weights, num_samples=len(class_weights), replacement=True)\n",
-    "    spec_dset_loaders[split] = torch.utils.data.DataLoader(spec_dsets[split], batch_size=b_size, num_workers=0, sampler=sampler)\n",
-    "    print('done making loader:', split)"
+    "\n",
+    "    # Create data loaders for each split using the sampler for handling class imbalance,\n",
+    "    # defining batch size and number of worker processes.\n",
+    "    spec_dset_loaders[split] = torch.utils.data.DataLoader(\n",
+    "        spec_dsets[split],  # Dataset\n",
+    "        batch_size=b_size,  # Batch size defined elsewhere\n",
+    "        num_workers=0,  # Number of subprocesses to use for data loading (0 means that the data will be loaded in the main process)\n",
+    "        sampler=sampler  # Use the weighted random sampler\n",
+    "    )\n",
+    "\n",
+    "    # Print completion status of loader setup for each split.\n",
+    "    print('done making loader:', split)\n"
    ]
   },
   {
@@ -90,6 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting a random subject and song for our sample data\n",
     "rand_subj = torch.randint(low=1, high=num_sub, size=(1,)).item()\n",
     "rand_song = torch.randint(low=1, high=num_sess, size=(1,)).item()\n",
     "\n",
@@ -100,6 +125,7 @@
     "else:\n",
     "    rand_data_path = os.path.join(val_dir, rand_data_path)\n",
     "\n",
+    "# Reading the data from the .fif file\n",
     "raw = mne.io.read_raw_fif(rand_data_path, preload=True)"
    ]
   },
@@ -210,7 +236,9 @@
     }
    ],
    "source": [
+    "# Choosing the channel to plot\n",
     "first_channel_idx = 0\n",
+    "# Plots the spectrogram of the data for our selected channel\n",
     "power.plot(picks=first_channel_idx, baseline=(-0.5, 0), mode='logratio', show=True, colorbar=True, tmin=0, tmax=10)\n",
     "print(f'Channel {first_channel_idx+1} Spectrogram for Subject {rand_subj} Listening to Song {rand_song}')\n",
     "\n",
@@ -226,6 +254,7 @@
     "# Compute the mean across the last dimension to average adjacent bins\n",
     "eeg_data = eeg_data.mean(dim=3)\n",
     "\n",
+    "# Reshaping the data by flattening the last 2 dims\n",
     "new_shape = (eeg_data.shape[0], eeg_data.shape[1] * eeg_data.shape[2])  # (129, 20*42)\n",
     "eeg_data = eeg_data.reshape(new_shape)\n",
     "\n",
@@ -251,6 +280,7 @@
     }
    ],
    "source": [
+    "# Getting our raw data (before preprocessing)\n",
     "raw_data_path = f'../../ds003774/sub-0{rand_subj//10}{rand_subj%10}/ses-{rand_song//10}{rand_song%10}/eeg/sub-0{rand_subj//10}{rand_subj%10}_ses-{rand_song//10}{rand_song%10}_task-MusicListening_run-{rand_song}_eeg.set'\n",
     "very_raw = read_raw_eeglab(raw_data_path, preload=True)"
    ]
