--- a/model_training/CNN_VT.nbconvert.ipynb
+++ b/model_training/CNN_VT.nbconvert.ipynb
@@ -39,38 +39,68 @@
    "source": [
     "class EEGCNN(nn.Module):\n",
     "    def __init__(self, num_classes=4):\n",
+    "        # Initialize the EEGCNN class as a subclass of nn.Module.\n",
     "        super(EEGCNN, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=(3, 40), padding=(1, 20))  # Preserves time dimension\n",
+    "\n",
+    "        # First convolutional layer with 16 filters, kernel size of (3, 40), and padding to preserve the time dimension.\n",
+    "        self.conv1 = nn.Conv2d(1, 16, kernel_size=(3, 40), padding=(1, 20))\n",
+    "        # Batch normalization for the first convolutional layer to stabilize learning.\n",
     "        self.bn1 = nn.BatchNorm2d(16)\n",
-    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=(3, 25), padding=(1, 12))  # Preserves time dimension\n",
+    "\n",
+    "        # Second convolutional layer with 32 filters, kernel size of (3, 25), and padding to preserve the time dimension.\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=(3, 25), padding=(1, 12))\n",
+    "        # Batch normalization for the second convolutional layer.\n",
     "        self.bn2 = nn.BatchNorm2d(32)\n",
-    "        self.conv3 = nn.Conv2d(32, 64, kernel_size=(3, 10), padding=(1, 5))  # Preserves time dimension\n",
+    "\n",
+    "        # Third convolutional layer with 64 filters, kernel size of (3, 10), and padding to preserve the time dimension.\n",
+    "        self.conv3 = nn.Conv2d(32, 64, kernel_size=(3, 10), padding=(1, 5))\n",
+    "        # Batch normalization for the third convolutional layer.\n",
     "        self.bn3 = nn.BatchNorm2d(64)\n",
-    "        self.pool = nn.MaxPool2d((2, 4))  # Reduces height by 2, width by 4\n",
+    "\n",
+    "        # Max pooling layer to reduce the spatial dimensions of the output from convolutional layers.\n",
+    "        self.pool = nn.MaxPool2d((2, 4))\n",
+    "\n",
+    "        # Dropout layer with 0.25 probability, used to prevent overfitting by randomly zeroing some of the elements.\n",
     "        self.dropout1 = nn.Dropout(0.25)\n",
+    "        # Another dropout layer with a higher dropout rate of 0.5.\n",
     "        self.dropout2 = nn.Dropout(0.5)\n",
     "\n",
-    "        # Calculating the output dimensions after pooling:\n",
-    "        # Initial input shape: (1, 129, 1250)\n",
-    "        # After first pool: (16, 65, 312)\n",
-    "        # After second pool: (32, 33, 78)\n",
-    "        # After third pool: (64, 17, 20)\n",
-    "        self.fc1 = nn.Linear(19456, 100)  # 64 channels, height 17, width 20\n",
+    "        # Fully connected layer to reduce the dimension from the flattened output to 100.\n",
+    "        self.fc1 = nn.Linear(19456, 100)  # 64 channels * 17 height * 20 width = 19456\n",
+    "        # Second fully connected layer that maps the 100 features to the number of classes.\n",
     "        self.fc2 = nn.Linear(100, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x.unsqueeze(1)  # Add channel dimension\n",
+    "        # Define the forward pass through the network.\n",
+    "        x = x.unsqueeze(1)  # Add a channel dimension to the input if needed (for greyscale images).\n",
+    "\n",
+    "        # First convolutional layer followed by batch normalization, a leaky ReLU activation, and pooling.\n",
     "        x = F.leaky_relu(self.bn1(self.conv1(x)))\n",
     "        x = self.pool(x)\n",
+    "\n",
+    "        # Second convolutional layer followed by batch normalization, a leaky ReLU activation, and pooling.\n",
     "        x = F.leaky_relu(self.bn2(self.conv2(x)))\n",
     "        x = self.pool(x)\n",
+    "\n",
+    "        # Third convolutional layer followed by batch normalization, a leaky ReLU activation, and pooling.\n",
     "        x = F.leaky_relu(self.bn3(self.conv3(x)))\n",
     "        x = self.pool(x)\n",
+    "\n",
+    "        # Apply the first dropout layer.\n",
     "        x = self.dropout1(x)\n",
+    "        \n",
+    "        # Flatten the output of the last pooling layer to prepare it for the fully connected layer.\n",
     "        x = torch.flatten(x, 1)\n",
+    "\n",
+    "        # Fully connected layer with a leaky ReLU activation.\n",
     "        x = F.leaky_relu(self.fc1(x))\n",
+    "\n",
+    "        # Apply the second dropout layer before the final fully connected layer.\n",
     "        x = self.dropout2(x)\n",
+    "\n",
+    "        # Final fully connected layer that outputs the predictions.\n",
     "        x = self.fc2(x)\n",
+    "        \n",
     "        return x"
    ]
   },
@@ -26032,48 +26062,63 @@
     }
    ],
    "source": [
+    "# Check and set the appropriate device (GPU or MPS) based on availability.\n",
     "if torch.cuda.is_available():\n",
-    "    torch.cuda.set_device(cuda_device)\n",
+    "    torch.cuda.set_device(cuda_device)  # Set the specific GPU device if CUDA is available.\n",
     "elif torch.backends.mps.is_available():\n",
-    "    mps_device = torch.device(\"mps\")\n",
+    "    mps_device = torch.device(\"mps\")  # Set the MPS device for Apple Silicon chips if available.\n",
     "\n",
+    "# Define transformations to apply to training and validation datasets. Currently, it converts images to PyTorch tensors.\n",
     "data_transforms = {\n",
     "    'train': transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
+    "        transforms.ToTensor(),  # Convert images to tensor format.\n",
     "    ]),\n",
     "    'val': transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
+    "        transforms.ToTensor(),  # Convert images to tensor format.\n",
     "    ]),\n",
     "}\n",
     "\n",
-    "# Setup datasets and loaders\n",
+    "# Initialize datasets for training and validation using the specified directories and behavioral files.\n",
     "dsets = {\n",
     "    'train': RawDataset(train_dir, train_behav_file, data_transforms['train']),\n",
     "    'val': RawDataset(val_dir, val_behav_file, data_transforms['val'])\n",
     "}\n",
+    "# Calculate the number of samples in each dataset.\n",
     "dset_sizes = {split: len(dsets[split]) for split in ['train', 'val']}\n",
     "\n",
+    "# Initialize data loaders for training and validation, configuring class balancing via weighted sampling.\n",
     "dset_loaders = {}\n",
     "for split in ['train', 'val']:\n",
+    "    # Extract labels for all entries in the dataset to calculate class weights.\n",
     "    targets = np.array([dsets[split].get_label(i) for i in range(len(dsets[split]))])\n",
+    "    # Count occurrences of each class to address class imbalance.\n",
     "    class_counts = dsets[split].get_class_counts()\n",
+    "    # Compute weights for each sample, inversely proportional to class frequency.\n",
     "    class_weights = np.array([1.0 / class_counts[label] if class_counts[label] > 0 else 0 for label in targets])\n",
+    "    # Create a sampler for weighted sampling, which helps in dealing with imbalanced data by adjusting the likelihood of sample selection.\n",
     "    sampler = WeightedRandomSampler(class_weights, num_samples=len(class_weights), replacement=True)\n",
+    "    # Define the DataLoader for each dataset split, using the custom sampler and specifying batch size and number of workers.\n",
     "    dset_loaders[split] = torch.utils.data.DataLoader(dsets[split], batch_size=b_size, num_workers=0, sampler=sampler)\n",
+    "    # Confirmation message to indicate completion of DataLoader setup for each dataset split.\n",
     "    print('done making loader:', split)\n",
     "\n",
-    "# Initialize model, criterion, and optimizer\n",
+    "# Initialize the EEGCNN model, specifying the number of classes for the output layer.\n",
     "model_ft = EEGCNN(num_classes=4)\n",
+    "# Define the loss function, using cross-entropy loss which is common for classification tasks.\n",
     "criterion = nn.CrossEntropyLoss()\n",
+    "# Configure the optimizer, using Adam algorithm with a specified learning rate and weight decay for regularization.\n",
     "optimizer_ft = optim.Adam(model_ft.parameters(), lr=0.0001, weight_decay=1e-5)\n",
     "\n",
-    "# Device configuration with MPS support\n",
+    "# Determine the device to train on, prioritizing CUDA (GPU), MPS (Apple Silicon), or defaulting to CPU.\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "# Move the model and loss function to the chosen device to enable GPU/MPS acceleration.\n",
     "model_ft.to(device)\n",
     "criterion.to(device)\n",
+    "# Print the device being used for training to confirm the setup.\n",
     "print(f\"Training on {device}\")\n",
     "\n",
-    "# Train model\n",
+    "# Function call to train the model, passing the model, loss function, optimizer, learning rate scheduler, data loaders, dataset sizes, and number of epochs.\n",
+    "# This function presumably handles the entire training process including forward and backward passes, and learning rate adjustments.\n",
     "model_ft, accuracies, losses, preds, labels = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler, dset_loaders, dset_sizes, num_epochs=n_epochs)"
    ]
   },
@@ -26122,18 +26167,30 @@
     }
    ],
    "source": [
-    "# Output results\n",
+    "# Loop over each dataset split ('train' and 'val') and print out accuracies and losses for each epoch.\n",
     "for split in ['train', 'val']:\n",
+    "    # Print the accuracies for each epoch. The `accuracies` dictionary likely contains lists of accuracies per epoch for each split.\n",
     "    print(split, 'accuracies by epoch:', accuracies[split])\n",
+    "    # Print the losses for each epoch. The `losses` dictionary similarly contains lists of losses per epoch for each split.\n",
     "    print(split, 'losses by epoch:', losses[split])\n",
     "\n",
+    "# Convert accuracy values from tensors to NumPy arrays for easier manipulation and possible external processing.\n",
+    "# This is necessary because many PyTorch operations are performed on the GPU, and moving them to CPU memory\n",
+    "# with `.cpu()` makes them compatible with many other Python libraries that expect NumPy arrays.\n",
     "for key, value in accuracies.items():\n",
-    "    new_value = [v.cpu().numpy() for v in value]\n",
-    "    accuracies[key] = new_value\n",
+    "    new_value = [v.cpu().numpy() for v in value]  # Convert each tensor in the list to a NumPy array.\n",
+    "    accuracies[key] = new_value  # Update the dictionary with the new list of NumPy arrays.\n",
     "\n",
+    "# Save the trained model's state dictionary to a file. This allows the model to be re-loaded later with the exact same parameters.\n",
     "torch.save(model_ft.state_dict(), '../../models/CNN_VT_best_model.pt')\n",
     "\n",
+    "# Call a function to plot the training history.\n",
+    "# This function likely generates plots of accuracies and losses over the epochs, providing a visual representation of the training process.\n",
     "plot_training_history(accuracies, losses, 'CNN_VT')\n",
+    "\n",
+    "# Call a function to plot a confusion matrix.\n",
+    "# The confusion matrix compares the labels predicted by the model against the true labels,\n",
+    "# providing insight into how well the model is performing across different classes.\n",
     "plot_confusion_matrix(labels, preds, 'CNN_VT')"
    ]
   }
