--- a/processing_data/build_behav_csv.ipynb
+++ b/processing_data/build_behav_csv.ipynb
@@ -10,7 +10,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Manually inputting the data as lists\n",
+    "# Define a dictionary containing lists that represent the data.\n",
+    "# Each key corresponds to a column name, and each list represents the data for that column.\n",
     "data = {\n",
     "    'Subject': [1]*12 + [2]*12 + [3]*12 + [4]*12 + [5]*12 + [6]*12 + [7]*12 + [8]*12 + [9]*12 + [10]*12 + [11]*12 + [12]*12 + [13]*12 + [14]*12 + [15]*12 + [16]*12 + [17]*12 + [18]*12 + [19]*12 + [20]*12,\n",
     "    'Song_ID': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]*20,\n",
@@ -40,15 +41,17 @@
     "    ]\n",
     "}\n",
     "\n",
-    "# Create DataFrame\n",
+    "# Convert the dictionary into a pandas DataFrame for easier data manipulation and analysis.\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Split into train and validation datasets\n",
-    "split_row = int(len(df) * 0.8)  # For example, 80% for training\n",
+    "# Determine the row number to split the DataFrame into training and validation sets, based on an 80%-20% split.\n",
+    "split_row = int(len(df) * 0.8)\n",
+    "\n",
+    "# Split the DataFrame into training and validation sets using the computed row number as the cut-off point.\n",
     "train_df = df.iloc[:split_row]\n",
     "val_df = df.iloc[split_row:]\n",
     "\n",
-    "# Save DataFrame to CSV\n",
+    "# Save the training and validation datasets to CSV files for external use or future processing.\n",
     "train_df.to_csv('../labels/train_behav.csv', index=False)\n",
     "val_df.to_csv('../labels/val_behav.csv', index=False)\n"
    ]
