--- a/model_training/CNN_spec.ipynb
+++ b/model_training/CNN_spec.ipynb
@@ -25,28 +25,54 @@
    },
    "outputs": [],
    "source": [
+    "# Define a Convolutional Neural Network class using PyTorch's nn.Module as the base class.\n",
     "class SpectrogramCNN(nn.Module):\n",
     "    def __init__(self, num_classes=4):\n",
+    "        # Initialize the parent class (nn.Module) and specify the current subclass name.\n",
     "        super(SpectrogramCNN, self).__init__()\n",
-    "        # Reduce the number of convolutional layers and channels\n",
-    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=(3, 10), padding=(1, 5))  # One layer, more channels\n",
-    "        self.bn1 = nn.BatchNorm2d(32)\n",
-    "        self.pool = nn.MaxPool2d((2, 4))  # Pooling to reduce dimensions\n",
     "\n",
-    "        # Simplified dropout and fewer fully connected layers\n",
+    "        # First convolutional layer: \n",
+    "        # - Input channels = 1 (assuming grayscale or single-channel input),\n",
+    "        # - Output channels = 32,\n",
+    "        # - Kernel size = (3, 10) which determines the filter size,\n",
+    "        # - Padding = (1, 5) to keep the spatial dimensions constant after this layer.\n",
+    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=(3, 10), padding=(1, 5))\n",
+    "        \n",
+    "        # Batch normalization layer to stabilize learning by normalizing the input layer by re-centering and re-scaling.\n",
+    "        self.bn1 = nn.BatchNorm2d(32)\n",
+    "        \n",
+    "        # Max pooling layer to reduce the spatial dimensions of the output from the convolutional layer.\n",
+    "        # Pool size = (2, 4) reduces height by 2 and width by 4.\n",
+    "        self.pool = nn.MaxPool2d((2, 4))\n",
+    "\n",
+    "        # Dropout layer to prevent overfitting by randomly zeroing some of the elements of the input tensor\n",
+    "        # with probability 0.25 at each update during training time.\n",
     "        self.dropout = nn.Dropout(0.25)\n",
     "        \n",
-    "        # The fully connected layer sizes need to be adjusted based on the actual output dimensions\n",
-    "        # Placeholder dimensions for illustration; you will need to calculate the exact number based on your input size after pooling\n",
-    "        self.fc1 = nn.Linear(430080, num_classes)  # Direct connection to output\n",
+    "        # Fully connected layer that maps the reshaped output to the number of classes.\n",
+    "        # Note: The input features (430080) need to be calculated based on the output size of the last pooling layer,\n",
+    "        # which depends on the input size of the network.\n",
+    "        self.fc1 = nn.Linear(430080, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x.unsqueeze(1)  # Add channel dimension\n",
+    "        # Forward pass definition:\n",
+    "        # - Add an extra channel dimension.\n",
+    "        x = x.unsqueeze(1)\n",
+    "        \n",
+    "        # Apply the first convolutional layer, followed by batch normalization, a Leaky ReLU activation function,\n",
+    "        # and then a max pooling layer.\n",
     "        x = F.leaky_relu(self.bn1(self.conv1(x)))\n",
     "        x = self.pool(x)\n",
+    "        \n",
+    "        # Apply dropout.\n",
     "        x = self.dropout(x)\n",
+    "        \n",
+    "        # Flatten the output of the last layer to make it suitable for input to the fully connected layer.\n",
     "        x = torch.flatten(x, 1)\n",
+    "        \n",
+    "        # Output layer where the final classification is computed.\n",
     "        x = self.fc1(x)\n",
+    "        \n",
     "        return x"
    ]
   },
@@ -58,49 +84,61 @@
    },
    "outputs": [],
    "source": [
+    "# Check for CUDA GPU availability and set the device accordingly. If CUDA is not available, check for MPS availability and set the MPS device.\n",
     "if torch.cuda.is_available():\n",
     "    torch.cuda.set_device(cuda_device)\n",
     "elif torch.backends.mps.is_available():\n",
     "    mps_device = torch.device(\"mps\")\n",
     "\n",
+    "# Define transformations for training and validation datasets. Here, images are converted to PyTorch tensors.\n",
     "data_transforms = {\n",
     "    'train': transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
+    "        transforms.ToTensor(),  # Convert images to tensor format\n",
     "    ]),\n",
     "    'val': transforms.Compose([\n",
-    "        transforms.ToTensor(),\n",
+    "        transforms.ToTensor(),  # Convert images to tensor format\n",
     "    ]),\n",
     "}\n",
     "\n",
-    "# Setup datasets and loaders\n",
+    "# Setup spectrogram datasets for training and validation using specified directories and behavior files.\n",
+    "# Apply the previously defined transformations to each dataset.\n",
     "dsets = {\n",
     "    'train': SpectroDataset(train_dir, train_behav_file, data_transforms['train']),\n",
     "    'val': SpectroDataset(val_dir, val_behav_file, data_transforms['val'])\n",
     "}\n",
+    "\n",
+    "# Calculate dataset sizes for train and validation sets.\n",
     "dset_sizes = {split: len(dsets[split]) for split in ['train', 'val']}\n",
     "\n",
+    "# Initialize dictionary to store data loaders, configured with class balancing via weighted sampling.\n",
     "dset_loaders = {}\n",
     "for split in ['train', 'val']:\n",
+    "    # Get array of labels for each dataset.\n",
     "    targets = np.array([dsets[split].get_label(i) for i in range(len(dsets[split]))])\n",
+    "    # Get class counts to determine imbalance.\n",
     "    class_counts = dsets[split].get_class_counts()\n",
+    "    # Calculate weights inversely proportional to class frequencies to address class imbalance.\n",
     "    class_weights = np.array([1.0 / class_counts[label] if class_counts[label] > 0 else 0 for label in targets])\n",
+    "    # Create a weighted sampler using these weights.\n",
     "    sampler = WeightedRandomSampler(class_weights, num_samples=len(class_weights), replacement=True)\n",
+    "    # Create the DataLoader for each split using the sampler.\n",
     "    dset_loaders[split] = torch.utils.data.DataLoader(dsets[split], batch_size=b_size, num_workers=0, sampler=sampler)\n",
     "    print('done making loader:', split)\n",
     "\n",
-    "# Initialize model, criterion, and optimizer\n",
-    "model_ft = SpectrogramCNN(num_classes=4)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer_ft = optim.Adam(model_ft.parameters(), lr=0.0001, weight_decay=1e-5)\n",
+    "# Initialize the model, loss function, and optimizer.\n",
+    "model_ft = SpectrogramCNN(num_classes=4)  # Initialize the CNN model defined earlier.\n",
+    "criterion = nn.CrossEntropyLoss()  # Loss function for classification.\n",
+    "optimizer_ft = optim.Adam(model_ft.parameters(), lr=0.0001, weight_decay=1e-5)  # Adam optimizer with learning rate and weight decay settings.\n",
     "\n",
-    "# Device configuration with MPS support\n",
+    "# Set up the device (CUDA, MPS, or CPU) based on availability and move the model and loss function to that device.\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
     "model_ft.to(device)\n",
     "criterion.to(device)\n",
     "print(f\"Training on {device}\")\n",
     "\n",
-    "# Train model\n",
-    "model_ft, accuracies, losses, preds, labels = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler, dset_loaders, dset_sizes, num_epochs=n_epochs)"
+    "# Train the model using the provided datasets, loaders, and training configuration.\n",
+    "# This function is assumed to handle the training loop, including forward and backward passes, optimization, and learning rate scheduling.\n",
+    "model_ft, accuracies, losses, preds, labels = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler, dset_loaders, dset_sizes, num_epochs=n_epochs)\n"
    ]
   },
   {
@@ -109,19 +147,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Output results\n",
+    "# Output the accuracies and losses for each training epoch for both training and validation datasets.\n",
     "for split in ['train', 'val']:\n",
+    "    # Print the accuracies recorded during each epoch of the training and validation phases.\n",
     "    print(split, 'accuracies by epoch:', accuracies[split])\n",
+    "    # Print the losses recorded during each epoch of the training and validation phases.\n",
     "    print(split, 'losses by epoch:', losses[split])\n",
     "\n",
+    "# Convert any Tensors in the accuracies dictionary to NumPy arrays for easier handling in non-PyTorch contexts.\n",
     "for key, value in accuracies.items():\n",
+    "    # Use a list comprehension to iterate over all accuracy values for each epoch,\n",
+    "    # move them to CPU if they are on a GPU, and convert them to NumPy arrays.\n",
     "    new_value = [v.cpu().numpy() for v in value]\n",
+    "    # Update the dictionary with the converted values.\n",
     "    accuracies[key] = new_value\n",
     "\n",
+    "# Save the trained model's weights to a file for later use, typically for deployment or further evaluation.\n",
     "torch.save(model_ft.state_dict(), '../../models/CNN_spec_best_model.pt')\n",
     "\n",
+    "# Plot the training history, which typically includes plots of accuracy and loss over training epochs.\n",
+    "# This function is assumed to handle plotting and visualization tasks, enhancing understanding of training dynamics.\n",
     "plot_training_history(accuracies, losses, 'CNN_spec')\n",
-    "plot_confusion_matrix(labels, preds, 'CNN_spec')"
+    "\n",
+    "# Generate and plot a confusion matrix to visualize the performance of the trained model in terms of\n",
+    "# its ability to correctly classify examples from the validation set.\n",
+    "# This is a crucial step for understanding model performance on different classes.\n",
+    "plot_confusion_matrix(labels, preds, 'CNN_spec')\n"
    ]
   }
  ],
